test/sprtn/errors/undefined.sprtn
a
(define (f a b) (* a b c))
(f d)
(e f)
(if (g h)
    j
    k)
'l
`m
`,n
`(o p ,@q r)
(let ((s t)
      (t u))
  (* s t u))
(letrec ((u v)
         (v w))
  (* u v w))
(letrec ((v (cons 23 u))
         (u (cons 5 (lambda () v))))
  (* u v))
(letrec ((u (cons 5 (lambda () v)))
         (v (cons 23 u)))
  (* u v))
